--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">DesignTemplate</string>
+    <string name="app_name">Sounderful</string>
     <string name="title_activity_privacy_wall">PrivacyWall</string>
     <string name="following">đang theo dõi</string>
     <string name="follow">theo dõi</string>
@@ -25,5 +25,5 @@
     <string name="title_newpost_error">Vui lòng nhập tên bài hát</string>
     <string name="track_newpost_error">Vui lòng chọn bài hát</string>
     <string name="fail_upload">Đăng tải bài hát không thành công</string>
-    <string name="request_fail">Request fail !</string>
+    <string name="request_fail">Request fail!</string>
 </resources>
